--- a/scss/site.scss
+++ b/scss/site.scss
@@ -39,6 +39,17 @@ $image-width:                 42.86% !default;
 
 $tablet:                      1280px !default;
 
+@font-face {
+  font-family: 'fontello';
+  src: url('assets/icons/fontello.eot?12209906');
+  src: url('assets/icons/fontello.eot?12209906#iefix') format('embedded-opentype'),
+  url('assets/icons/fontello.woff?12209906') format('woff'),
+  url('assets/icons/fontello.ttf?12209906') format('truetype'),
+  url('assets/icons/fontello.svg?12209906#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
   font-size: $base-font-size;
 }
@@ -83,6 +94,24 @@ a {
   &:hover, &:active {
     color: $yellow;
   }
+}
+
+.icon {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1em;
+  margin-left: .2em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -141,7 +170,7 @@ body {
         color: darken($white, 5%);
       }
 
-      .social-links {
+      .contact-info {
         display: inline-flex;
         margin: $xxxl-size auto $xl-size auto;
         font-size: $sm-size;
@@ -152,15 +181,12 @@ body {
         > div {
           display: flex;
           align-items: center;
+          margin-bottom: $xxs-size;
 
           &:after {
             content: "|";
             padding-right: $lg-size;
             padding-left: $lg-size;
-          }
-
-          .icon {
-            margin-right: 0.25rem;
           }
 
           &:last-child {
@@ -185,7 +211,7 @@ body {
           color: inherit;
         }
 
-        .social-links {
+        .contact-info {
           color: inherit;
           opacity: 0.7;
         }
@@ -272,6 +298,7 @@ body {
               display: flex;
               align-items: center;
               font-size: $sm-size;
+              color: $pewter;
 
               > div:not(:last-child) {
                 margin-right: $md-size;
@@ -388,6 +415,17 @@ body {
           &::after {
             border-left: .625rem solid $yellow;
           }
+        }
+      }
+    }
+
+    footer {
+      .social-links {
+        text-align: center;
+
+        i {
+          color: $dove-gray;
+          cursor: pointer;
         }
       }
     }
