--- a/scss/site.scss
+++ b/scss/site.scss
@@ -38,6 +38,7 @@ $heading-letter-spacing:      2px !default;
 $image-width:                 42.86% !default;
 
 $tablet:                      1280px !default;
+$mobile:                      700px !default;
 
 @font-face {
   font-family: 'fontello';
@@ -92,7 +93,7 @@ a {
   transition: color 0.250s;
 
   &:hover, &:active {
-    color: $yellow;
+    color: darken($yellow, 10%);
   }
 }
 
@@ -154,6 +155,7 @@ body {
       top: 0;
       left: 0;
       width: 100%;
+      height: 100vh;
       z-index: 2;
 
       h1 {
@@ -172,27 +174,53 @@ body {
 
       .contact-info {
         display: inline-flex;
+        flex-direction: column;
         margin: $xxxl-size auto $xl-size auto;
         font-size: $sm-size;
         flex-wrap: wrap;
         justify-content: center;
         color: darken($white, 5%);
+        position: absolute;
+        bottom: $md-size;
+        right: $md-size;
 
-        > div {
+        a {
           display: flex;
           align-items: center;
           margin-bottom: $xxs-size;
-
-          &:after {
-            content: "|";
-            padding-right: $lg-size;
-            padding-left: $lg-size;
-          }
+          border-bottom: none;
 
           &:last-child {
             &:after {
               content: '';
               padding: 0;
+            }
+          }
+
+          &:hover {
+            color: $yellow;
+          }
+        }
+      }
+    }
+
+    @media only screen and (min-width: $mobile) {
+      .head {
+        height: auto;
+
+        .contact-info {
+          position: static;
+          flex-direction: row;
+
+          a {
+            &:hover {
+              color: darken($yellow, 10%);
+            }
+
+            &:after {
+              content: "|";
+              padding-right: $lg-size;
+              padding-left: $lg-size;
             }
           }
         }
@@ -206,6 +234,7 @@ body {
 
       .head {
         position: static;
+        height: auto;
 
         p {
           color: inherit;
@@ -214,6 +243,20 @@ body {
         .contact-info {
           color: inherit;
           opacity: 0.7;
+          position: static;
+          flex-direction: row;
+
+          a {
+            &:hover {
+              color: darken($yellow, 10%);
+            }
+
+            &:after {
+              content: "|";
+              padding-right: $lg-size;
+              padding-left: $lg-size;
+            }
+          }
         }
       }
     }
@@ -242,6 +285,10 @@ body {
         display: flex;
         align-items: center;
         margin-bottom: $md-size;
+
+        a {
+          border-bottom: none;
+        }
 
         > * {
           flex-grow: 1;
@@ -305,6 +352,10 @@ body {
               }
             }
           }
+
+          &:hover {
+            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+          }
         }
       }
 
@@ -356,11 +407,18 @@ body {
 
         li {
           padding: 5px 8px;
-          background-color: lighten($yellow, 20%);
+          background-color: $white;
+          border: solid 1px $pewter;
           margin-right: $md-size;
           border-radius: 5px;
           margin-bottom: $sm-size;
           cursor: pointer;
+          transition: all 0.250s;
+
+          &:hover {
+            background-color: $dove-gray;
+            color: $white;
+          }
         }
       }
     }
@@ -423,9 +481,18 @@ body {
       .social-links {
         text-align: center;
 
-        i {
+        a {
           color: $dove-gray;
           cursor: pointer;
+          border-bottom: none;
+
+          i {
+            font-size: 1.25rem;
+          }
+
+          &:hover {
+            color: $yellow;
+          }
         }
       }
     }
