--- a/aboutme.css
+++ b/aboutme.css
@@ -1,3 +1,35 @@
+:root {
+  --base-size: 16px;
+  --x5l-size: 5.61rem;
+  --x4l-size: 4.209rem;
+  --xxxl-size: 3.157rem;
+  --xxl-size: 2.369rem;
+  --xl-size: 1.777rem;
+  --lg-size: 1.333rem;
+  --md-size: 1rem;
+  --sm-size: 0.75rem;
+  --xs-size: 0.563rem;
+  --xxs-size: 0.422rem;
+  --xxxs-size: 0.317rem;
+  --x4s-size: 0.238rem;
+  font-size: var(--base-size); }
+
+@media only screen and (min-width: 700px) {
+  :root {
+    --base-size: 19px;
+    --x5l-size: 5.61rem;
+    --x4l-size: 4.209rem;
+    --xxxl-size: 3.157rem;
+    --xxl-size: 2.369rem;
+    --xl-size: 1.777rem;
+    --lg-size: 1.333rem;
+    --md-size: 1rem;
+    --sm-size: 0.75rem;
+    --xs-size: 0.563rem;
+    --xxs-size: 0.422rem;
+    --xxxs-size: 0.317rem;
+    --x4s-size: 0.238rem; } }
+
 @font-face {
   font-family: 'fontello';
   src: url("assets/icons/fontello.eot?12209906");
@@ -5,11 +37,8 @@
   font-weight: normal;
   font-style: normal; }
 
-:root {
-  font-size: 18px; }
-
 h1 {
-  font-size: 5.61rem;
+  font-size: var(--x5l-size);
   color: #adb8b5;
   margin-bottom: 0; }
 
@@ -20,18 +49,18 @@ h1, h2, h3, h4, h5, h6 {
 
 h2 {
   border-bottom: dashed 4px #ffde08;
-  font-size: 2.369rem;
+  font-size: var(--xxl-size);
   color: #adb8b5; }
 
 h3 {
-  font-size: 1.333rem; }
+  font-size: var(--lg-size); }
 
 h4 {
-  font-size: 1rem;
+  font-size: var(--md-size);
   color: #909e9a; }
 
 ul li {
-  margin-bottom: 0.238rem; }
+  margin-bottom: var(--x4s-size); }
 
 a {
   text-decoration: none;
@@ -73,7 +102,7 @@ body {
     background-image: url("assets/photo-2.jpeg");
     background-size: cover; }
   body .right {
-    padding: 1.333rem 5.61rem;
+    padding: var(--xl-size);
     flex-grow: 1; }
     body .right .scrim {
       display: block;
@@ -87,7 +116,7 @@ body {
       opacity: 0.3; }
     body .right .head {
       text-align: center;
-      margin: 2.369rem 0 4.209rem 0;
+      margin: var(--xxl-size) 0 var(--x4l-size) 0;
       position: absolute;
       top: 0;
       left: 0;
@@ -101,24 +130,24 @@ body {
         text-transform: uppercase;
         letter-spacing: 1px;
         margin: 0;
-        font-size: 1rem;
+        font-size: var(--md-size);
         font-weight: bold;
         color: #f2f2f2; }
       body .right .head .contact-info {
         display: inline-flex;
         flex-direction: column;
-        margin: 3.157rem auto 1.777rem auto;
-        font-size: 0.75rem;
+        margin: var(--xxxl-size) auto var(--xl-size) auto;
+        font-size: var(--sm-size);
         flex-wrap: wrap;
         justify-content: center;
         color: #f2f2f2;
         position: absolute;
-        bottom: 1rem;
-        right: 1rem; }
+        bottom: var(--md-size);
+        right: var(--md-size); }
         body .right .head .contact-info a {
           display: flex;
           align-items: center;
-          margin-bottom: 0.422rem;
+          margin-bottom: var(--xxs-size);
           border-bottom: none; }
           body .right .head .contact-info a:last-child:after {
             content: '';
@@ -135,8 +164,8 @@ body {
             color: #d4b800; }
           body .right .head .contact-info a:after {
             content: "|";
-            padding-right: 1.333rem;
-            padding-left: 1.333rem; } }
+            padding-right: var(--lg-size);
+            padding-left: var(--lg-size); } }
     @media only screen and (min-width: 1280px) {
       body .right .scrim {
         display: none; }
@@ -154,31 +183,31 @@ body {
             color: #d4b800; }
           body .right .head .contact-info a:after {
             content: "|";
-            padding-right: 1.333rem;
-            padding-left: 1.333rem; } }
+            padding-right: var(--lg-size);
+            padding-left: var(--lg-size); } }
     body .right .intro {
-      margin-bottom: 4.209rem; }
+      margin-bottom: var(--x4l-size); }
       body .right .intro p {
-        font-size: 1.333rem; }
+        font-size: var(--lg-size); }
       body .right .intro p::first-letter {
-        font-size: 2.369rem;
+        font-size: var(--xxl-size);
         font-family: "Bebas Neue", cursive; }
     body .right .section {
-      margin-bottom: 4.209rem; }
+      margin-bottom: var(--x4l-size); }
       body .right .section h3, body .right .section h4 {
         margin-bottom: 0; }
       body .right .section .top-row {
         display: flex;
         align-items: center;
-        margin-bottom: 1rem; }
+        margin-bottom: var(--md-size); }
         body .right .section .top-row a {
           border-bottom: none; }
         body .right .section .top-row > * {
           flex-grow: 1; }
       body .right .section .experience, body .right .section .education {
-        margin-bottom: 3.157rem; }
+        margin-bottom: var(--xxxl-size); }
       body .right .section .experience .manager {
-        font-size: 0.75rem;
+        font-size: var(--sm-size);
         color: #909e9a; }
         body .right .section .experience .manager span:first-child {
           font-weight: bold; }
@@ -186,15 +215,15 @@ body {
           font-style: italic; }
       body .right .section .duration {
         text-align: right;
-        font-size: 0.75rem;
+        font-size: var(--sm-size);
         color: #909e9a; }
       body .right .section .cards .card {
         border: solid 1px #eeeeee;
         transition: box-shadow .1s ease-in-out;
         background-color: #ffffff;
-        margin-bottom: 1.777rem;
+        margin-bottom: var(--xl-size);
         display: flex;
-        padding: 1.333rem; }
+        padding: var(--lg-size); }
         body .right .section .cards .card .card-left {
           margin-right: 1rem; }
           body .right .section .cards .card .card-left img {
@@ -205,25 +234,25 @@ body {
           body .right .section .cards .card .card-right .reputation {
             display: flex;
             align-items: center;
-            font-size: 0.75rem;
+            font-size: var(--sm-size);
             color: #909e9a; }
             body .right .section .cards .card .card-right .reputation > div:not(:last-child) {
-              margin-right: 1rem; }
+              margin-right: var(--md-size); }
         body .right .section .cards .card:hover {
           box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15); }
       body .right .section .languages .language {
         display: flex;
         align-items: center;
-        margin-bottom: 0.563rem; }
+        margin-bottom: var(--xs-size); }
         body .right .section .languages .language div:first-child {
           width: 12rem;
-          font-size: 1.333rem; }
+          font-size: var(--lg-size); }
         body .right .section .languages .language .fluency {
           display: flex; }
           body .right .section .languages .language .fluency span {
-            width: 1.333rem;
-            height: 1.333rem;
-            margin-right: 1rem;
+            width: var(--lg-size);
+            height: var(--lg-size);
+            margin-right: var(--md-size);
             border: solid 2px #909e9a;
             border-radius: 50%;
             cursor: pointer;
@@ -244,9 +273,9 @@ body {
           padding: 5px 8px;
           background-color: #ffffff;
           border: solid 1px #909e9a;
-          margin-right: 1rem;
+          margin-right: var(--md-size);
           border-radius: 5px;
-          margin-bottom: 0.75rem;
+          margin-bottom: var(--sm-size);
           cursor: pointer;
           transition: all 0.250s; }
           body .right .section .interests li:hover {
@@ -255,7 +284,7 @@ body {
     body .right .chips {
       display: flex;
       flex-wrap: wrap;
-      font-size: 0.75rem; }
+      font-size: var(--sm-size); }
       body .right .chips .chip {
         cursor: pointer;
         background: #636363;
@@ -312,4 +341,5 @@ body {
       width: 42.86%;
       position: fixed; }
     body .right {
-      margin-left: 42.86%; } }
+      margin-left: 42.86%;
+      padding: var(--lg-size) var(--x5l-size); } }
