Readme and gulp updates

--- a/aboutme.css
+++ b/aboutme.css
@@ -348,4 +348,4 @@ body {
       position: fixed; }
     body .right {
       margin-left: 42.86%;
-      padding: var(--lg-size) var(--x5l-size); } }
+      padding: var(--lg-size) var(--xxxl-size); } }
